--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-boring-avatars-custom",
+  "name": "@liquidspirit/react-native-boring-avatars",
   "version": "1.0.2",
   "description": "React Native implementation of boring avatars",
   "main": "lib/module/index.js",
